--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 2rem;
   text-align: center;
 }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 
 .logo {
   height: 6em;
