--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -88,6 +88,7 @@
   margin: 0.2rem 0.7rem 0 1.2rem;
 }
 
+/* this class is not getting applied; are any getting applied?*/
 .mobile-header-image {
   height: 45px;
   width: 58px;
